--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 MONGO_DB_URI=mongodb+srv://<username>:<password>@<mongodb-url>/?retryWrites=true&w=majority
+RPC_URL=http://<subnet-node-ip>:9650/ext/bc/zate/rpc
